--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,7 @@ p{color:#696969;
 			    table{
 			    
 			        margin-top:5px;
-			        width: 280px;
+			        width: 290px;
 			        background-color:#FFC837;
 			        flex-direction: row;
 			        flex-wrap: wrap;
@@ -152,7 +152,7 @@ p{color:#696969;
 	
 			        display: flex;
 			        justify-content: center;
-			        justify-itens: center;
+			        justify-items: center;
 			    }
 			    
 			   
