--- a/css/style.css
+++ b/css/style.css
@@ -3,12 +3,15 @@ body{
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-size: cover;
+        margin-left: 5px;
+        margin-right: 5px;
+        
      
         
         text-align: center;
       }
       #iframe{
-        width: 580px;
+        width: 100%;
         height:300px;
         border: 0px;
       }
@@ -18,7 +21,7 @@ body{
         margin-left:auto;
 			  margin-right:auto;
 			  opacity: 80%;
-        width;580px;
+        width;100%;
         height: 200px;
         background-ocolor: Silver;
       
@@ -81,7 +84,7 @@ p{color:#696969;
 			    }
 			    #entradas{background-color:#FFFFFF;
 			    height:240px;
-			    width:580px;
+			    width:100%;
 			    margin-top:100px;
 			    margin-left:auto;
 			    margin-right:auto;
