--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@ body{
         background-size: cover;
         margin-left: 5px;
         margin-right: 5px;
+        width: 100%;
         
      
         
@@ -14,6 +15,7 @@ body{
         width: 100%;
         height:300px;
         border: 0px;
+        display: flex;
       }
       #pri{
         display: flex;
