--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@ p{color:#696969;
 			        
 			        width: 100%;
 			        
-			        font-size:15px;
+			        font-size:20px;
 			        
 			        margin-top:10px;
 			        
@@ -169,6 +169,7 @@ p{color:#696969;
 			        display: flex;
 			        justify-content: center;
 			        justify-items: center;
+			        font-family: fantasy;
 			    }
 			    
 			   
