--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,8 @@ p{color:#696969;
 			        flex-wrap: wrap;
 			        border: 5px solid yellow;
 			        opacity: 80%;
+			        text-transform: uppercase;
+			        font-family: fantasy;
 			        
 			        
 			        
