--- a/css/style.css
+++ b/css/style.css
@@ -135,7 +135,8 @@ p{color:#696969;
 			        border: 5px solid yellow;
 			        opacity: 80%;
 			        text-transform: uppercase;
-			        font-family: fantasy;
+			        font-family: 'Oswald', sans-serif;
+
 			        
 			        
 			        
