--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+      @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@600&display=swap');
+
+
+
 body{
         background-image: url('../images/IMG-20220719-WA0156.jpg');
         background-repeat: no-repeat;
@@ -6,7 +10,9 @@ body{
         text-align: center;
         width: 100%;
         
+        
       }
+
       #iframe{
         width: 980px;
         height:300px;
@@ -135,7 +141,7 @@ p{color:#696969;
 			        border: 5px solid yellow;
 			        opacity: 80%;
 			        text-transform: uppercase;
-			        font-family: 'Oswald', sans-serif;
+			        
 
 			        
 			        
@@ -172,7 +178,7 @@ p{color:#696969;
 			        display: flex;
 			        justify-content: center;
 			        justify-items: center;
-			        font-family: fantasy;
+			        
 			    }
 			    
 			   
